@@ -29,6 +29,8 @@ lib/gecoder/interface.rb -text
 lib/gecoder/interface/binding_changes.rb -text
 lib/gecoder/interface/branch.rb -text
 lib/gecoder/interface/constraints.rb -text
+lib/gecoder/interface/constraints/bool/boolean.rb -text
+lib/gecoder/interface/constraints/bool_var_constraints.rb -text
 lib/gecoder/interface/constraints/int/linear.rb -text
 lib/gecoder/interface/constraints/int_enum/distinct.rb -text
 lib/gecoder/interface/constraints/int_enum_constraints.rb -text
@@ -41,6 +43,7 @@ lib/gecoder/interface/variables.rb -text
 specs/binding_changes.rb -text
 specs/bool_var.rb -text
 specs/branch.rb -text
+specs/constraints/boolean.rb -text
 specs/constraints/constraint_helper.rb -text
 specs/constraints/constraints.rb -text
 specs/constraints/distinct.rb -text
