@@ -56,12 +56,17 @@ module Gecode
       # Aliases to make method-names more ruby-like.
       alias_method :assigned?, :assigned
       alias_method :in?, :in
+      alias_method :include?, :in
       alias_method :range?, :range
     end
     
     class BoolVar
       # Aliases to make method-names more ruby-like.
       alias_method :assigned?, :assigned
+      
+      def true?
+        val == 1
+      end
     end
   end
   
