@@ -9,6 +9,7 @@
 * Linear and simple relation constraints can now also be specified using #equal, #equal_to, #greater, #greater_than,... in addition to comparison operators.
 * Added distinct with offsets.
 * Simple relation constraints can now be used to specify relations between two variables.
+* Added basic boolean domain constraints along with conjunction and disjunction.
 
 == Version 0.2.0
 
